unpackaged/main/default/objects/Casos_Residente__c/Casos_Residente__c.object-meta.xml
<CustomObject>
    <label>Caso ATC</label>
    <nameField>
        <displayFormat>CAS-{00000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Casos ATC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>