unpackaged/main/default/objects/Casos_Residente__c/fields/AprobacionGarantia__c.field-meta.xml
<CustomField>
    <fullName>AprobacionGarantia__c</fullName>
    <label>Aprobación de Garantia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>