unpackaged/main/default/objects/Casos_Residente__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Casos_Residentes</relationshipName>
    <type>Lookup</type>
</CustomField>