unpackaged/main/default/objects/Casos_Residente__c/fields/Atendidopor__c.field-meta.xml
<CustomField>
    <fullName>Atendidopor__c</fullName>
    <label>Atendido por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratista</fullName>
            </value>
            <value>
                <fullName>Javer</fullName>
            </value>
            <value>
                <fullName>Proveedor</fullName>
            </value>
            <value>
                <fullName>Visita Asesoría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>