unpackaged/main/default/objects/Casos_Residente__c/fields/BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Horario de oficina</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Casos_Residentes</relationshipName>
    <type>Lookup</type>
</CustomField>