unpackaged/main/default/objects/Casos_Residente__c/fields/CasoResidente__c.field-meta.xml
<CustomField>
    <fullName>CasoResidente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Residentes</label>
    <referenceTo>Casos_Residente__c</referenceTo>
    <relationshipName>CasosResidentes</relationshipName>
    <type>Lookup</type>
</CustomField>