unpackaged/main/default/objects/Casos_Residente__c/fields/Catalagodefalla__c.field-meta.xml
<CustomField>
    <fullName>Catalagodefalla__c</fullName>
    <label>Catálogo de falla</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1.1.Contactos</fullName>
            </value>
            <value>
                <fullName>A1.2.Apagadores</fullName>
            </value>
            <value>
                <fullName>A1.3.Contacto TV-Cable</fullName>
            </value>
            <value>
                <fullName>A1.4.Pastillas térmicas</fullName>
            </value>
            <value>
                <fullName>A1.5.Base de medición</fullName>
            </value>
            <value>
                <fullName>A1.6.Estractor</fullName>
                <label>A1.6.Extractor</label>
            </value>
            <value>
                <fullName>A1.7.Soquet</fullName>
            </value>
            <value>
                <fullName>A1.8.Timbre</fullName>
            </value>
            <value>
                <fullName>A1.9.Centro de carga</fullName>
            </value>
            <value>
                <fullName>A1.10.Falta de cable del 8</fullName>
            </value>
            <value>
                <fullName>A1.11. Falta de cable 10</fullName>
            </value>
            <value>
                <fullName>A1.12.Falta de cable del 12</fullName>
            </value>
            <value>
                <fullName>A1.13. Falta de cable del 14</fullName>
            </value>
            <value>
                <fullName>A1.14. Falta de cable del 16</fullName>
            </value>
            <value>
                <fullName>A1.15.Falta Quinta Terminal</fullName>
            </value>
            <value>
                <fullName>B1.1.Bajante sanitario</fullName>
            </value>
            <value>
                <fullName>B1.2.Registro sanitario</fullName>
            </value>
            <value>
                <fullName>B1.3. Entronque</fullName>
            </value>
            <value>
                <fullName>B1.4.Bajante de agua pluvial</fullName>
            </value>
            <value>
                <fullName>B1.5.Lavabo</fullName>
            </value>
            <value>
                <fullName>B1.6.Tarja</fullName>
            </value>
            <value>
                <fullName>B1.7.WC</fullName>
            </value>
            <value>
                <fullName>B1.8.Regadera</fullName>
            </value>
            <value>
                <fullName>B1.9.Lavadero</fullName>
            </value>
            <value>
                <fullName>B1.10.Patio</fullName>
            </value>
            <value>
                <fullName>B1.11.Areneros</fullName>
            </value>
            <value>
                <fullName>B1.12.Descarga</fullName>
            </value>
            <value>
                <fullName>B1.14.Charola de baño</fullName>
            </value>
            <value>
                <fullName>B1.16.Araña - Cuadro Principal</fullName>
            </value>
            <value>
                <fullName>B1.17.Registros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>