unpackaged/main/default/objects/Casos_Residente__c/fields/Clasificaciondegarantia__c.field-meta.xml
<CustomField>
    <fullName>Clasificaciondegarantia__c</fullName>
    <label>Clasificación de garantía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G1</fullName>
                <label>G1-Atendió Contratista Original</label>
            </value>
            <value>
                <fullName>G2</fullName>
                <label>G2-Cargo a la Estimación</label>
            </value>
            <value>
                <fullName>G3</fullName>
                <label>G3-Cargo al Fondo de Garantía</label>
            </value>
            <value>
                <fullName>G4</fullName>
                <label>G4-Cargo JAVER</label>
            </value>
            <value>
                <fullName>G5</fullName>
                <label>G5-Atendió Cuadrilla JAVER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>