unpackaged/main/default/objects/Casos_Residente__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Fecha/Hora de cierre</label>
    <type>DateTime</type>
</CustomField>