unpackaged/main/default/objects/Casos_Residente__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comentarios internos</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>