unpackaged/main/default/objects/Casos_Residente__c/fields/Conjunto_Casos__c.field-meta.xml
<CustomField>
    <fullName>Conjunto_Casos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conjunto de Casos</label>
    <referenceTo>Conjunto_Casos__c</referenceTo>
    <relationshipLabel>Casos ATC</relationshipLabel>
    <relationshipName>Casos_ATC</relationshipName>
    <type>Lookup</type>
</CustomField>