unpackaged/main/default/objects/Casos_Residente__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>Email del contacto</label>
    <type>Email</type>
</CustomField>