unpackaged/main/default/objects/Casos_Residente__c/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <label>Contacto Fax</label>
    <type>Phone</type>
</CustomField>