unpackaged/main/default/objects/Casos_Residente__c/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <label>Teléfono celular del contacto</label>
    <type>Phone</type>
</CustomField>