unpackaged/main/default/objects/Casos_Residente__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>Teléfono del contacto</label>
    <type>Phone</type>
</CustomField>