unpackaged/main/default/objects/Casos_Residente__c/fields/Correoelectronicoalterno__c.field-meta.xml
<CustomField>
    <fullName>Correoelectronicoalterno__c</fullName>
    <label>Correo electrónico alterno</label>
    <type>Email</type>
</CustomField>