unpackaged/main/default/objects/Casos_Residente__c/fields/Created_Date_GMT_5__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_GMT_5__c</fullName>
    <formula>CreatedDate - (5/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (GMT-5)</label>
    <type>DateTime</type>
</CustomField>