unpackaged/main/default/objects/Casos_Residente__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Fecha/Hora de apertura</label>
    <type>DateTime</type>
</CustomField>