unpackaged/main/default/objects/Casos_Residente__c/fields/Detalledelreporte__c.field-meta.xml
<CustomField>
    <fullName>Detalledelreporte__c</fullName>
    <label>Detalle del reporte</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>