unpackaged/main/default/objects/Casos_Residente__c/fields/DiasAtencion__c.field-meta.xml
<CustomField>
    <fullName>DiasAtencion__c</fullName>
    <formula>IF( ISPICKVAL(Status__c , &quot;Cerrado&quot;),  LastModifiedDate - CreatedDate , NOW() - CreatedDate )</formula>
    <label>Dias de atención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>