unpackaged/main/default/objects/Casos_Residente__c/fields/DiasVencimiento__c.field-meta.xml
<CustomField>
    <fullName>DiasVencimiento__c</fullName>
    <label>Días Vencimiento</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>