unpackaged/main/default/objects/Casos_Residente__c/fields/DireccionOficial__c.field-meta.xml
<CustomField>
    <fullName>DireccionOficial__c</fullName>
    <formula>ViviendaProceso__r.Direccionoficial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección oficial</label>
    <type>Text</type>
</CustomField>