unpackaged/main/default/objects/Casos_Residente__c/fields/Fecha_Cierre_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre_Cancelacion__c</fullName>
    <label>Fecha de Cierre/Cancelación</label>
    <type>Date</type>
</CustomField>