unpackaged/main/default/objects/Casos_Residente__c/fields/Fecha_Programada_de_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Programada_de_Visita__c</fullName>
    <label>Fecha Programada de Visita</label>
    <type>Date</type>
</CustomField>