unpackaged/main/default/objects/Casos_Residente__c/fields/FechaCitaValoracion__c.field-meta.xml
<CustomField>
    <fullName>FechaCitaValoracion__c</fullName>
    <label>Fecha Cita Valoración</label>
    <type>Date</type>
</CustomField>