unpackaged/main/default/objects/Casos_Residente__c/fields/Fracc__c.field-meta.xml
<CustomField>
    <fullName>Fracc__c</fullName>
    <label>Fraccionamiento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>