unpackaged/main/default/objects/Casos_Residente__c/fields/Garantiavencida__c.field-meta.xml
<CustomField>
    <fullName>Garantiavencida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantía vencida</label>
    <type>Checkbox</type>
</CustomField>