unpackaged/main/default/objects/Casos_Residente__c/fields/Horacitavaloracion__c.field-meta.xml
<CustomField>
    <fullName>Horacitavaloracion__c</fullName>
    <label>Hora cita valoración</label>
    <type>Time</type>
</CustomField>