unpackaged/main/default/objects/Casos_Residente__c/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribuido</label>
    <type>Checkbox</type>
</CustomField>