unpackaged/main/default/objects/Casos_Residente__c/fields/Motivodenoatencion__c.field-meta.xml
<CustomField>
    <fullName>Motivodenoatencion__c</fullName>
    <label>Motivo de no atención</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesoría</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>