unpackaged/main/default/objects/Casos_Residente__c/fields/NoCaso__c.field-meta.xml
<CustomField>
    <fullName>NoCaso__c</fullName>
    <label>No. Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>