unpackaged/main/default/objects/Casos_Residente__c/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Casos_Residentes</relationshipName>
    <type>Lookup</type>
</CustomField>