unpackaged/main/default/objects/Casos_Residente__c/fields/Nomenclatura__c.field-meta.xml
<CustomField>
    <fullName>Nomenclatura__c</fullName>
    <label>Nomenclatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>