unpackaged/main/default/objects/Casos_Residente__c/fields/NumeroGarantiaMasComercial__c.field-meta.xml
<CustomField>
    <fullName>NumeroGarantiaMasComercial__c</fullName>
    <label>Número Garantía MasComercial</label>
    <type>TextArea</type>
</CustomField>