unpackaged/main/default/objects/Casos_Residente__c/fields/Origendecaso__c.field-meta.xml
<CustomField>
    <fullName>Origendecaso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origen de caso</label>
    <referenceTo>SocialPost</referenceTo>
    <relationshipName>Casos_Residentes</relationshipName>
    <type>Lookup</type>
</CustomField>