unpackaged/main/default/objects/Casos_Residente__c/fields/Origendegarantia__c.field-meta.xml
<CustomField>
    <fullName>Origendegarantia__c</fullName>
    <label>Origen de garantía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apoyo a cliente</fullName>
            </value>
            <value>
                <fullName>Contratista</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Supervisión</fullName>
            </value>
            <value>
                <fullName>Urbanización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>