unpackaged/main/default/objects/Casos_Residente__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Medio de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <label>Correo</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Telefono</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <label>Pagina</label>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Fraccionamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>