unpackaged/main/default/objects/Casos_Residente__c/fields/Procede__c.field-meta.xml
<CustomField>
    <fullName>Procede__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procede</label>
    <type>Checkbox</type>
</CustomField>