unpackaged/main/default/objects/Casos_Residente__c/fields/Report_Count__c.field-meta.xml
<CustomField>
    <fullName>Report_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>