unpackaged/main/default/objects/Casos_Residente__c/fields/SuppliedCompany__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCompany__c</fullName>
    <label>Compañía Web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>