unpackaged/main/default/objects/Casos_Residente__c/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <label>Email Web</label>
    <type>Email</type>
</CustomField>