unpackaged/main/default/objects/Casos_Residente__c/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <label>Nombre Web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>