unpackaged/main/default/objects/Casos_Residente__c/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <label>Teléfono Web</label>
    <length>40</length>
    <type>Text</type>
</CustomField>