unpackaged/main/default/objects/Casos_Residente__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A. Instalación eléctrica</fullName>
            </value>
            <value>
                <fullName>B. Instalacion sanitaria</fullName>
            </value>
            <value>
                <fullName>C. Instalacion hidráulica</fullName>
            </value>
            <value>
                <fullName>D. Instalación gas</fullName>
            </value>
            <value>
                <fullName>E. Albañilería</fullName>
            </value>
            <value>
                <fullName>F. Acabados Interior</fullName>
            </value>
            <value>
                <fullName>G. Acabado Exterior</fullName>
            </value>
            <value>
                <fullName>H. Aluminio</fullName>
            </value>
            <value>
                <fullName>I. Puertas</fullName>
            </value>
            <value>
                <fullName>J. Impermeabilización</fullName>
            </value>
            <value>
                <fullName>K. Herrería</fullName>
            </value>
            <value>
                <fullName>L. Urbanización</fullName>
            </value>
            <value>
                <fullName>M. Infraestructura</fullName>
            </value>
            <value>
                <fullName>N. Accesorios</fullName>
            </value>
            <value>
                <fullName>O. Servicios</fullName>
            </value>
            <value>
                <fullName>P. Organización Vecinal</fullName>
            </value>
            <value>
                <fullName>Q. Ventas</fullName>
            </value>
            <value>
                <fullName>R. Seguimiento de Ventas</fullName>
            </value>
            <value>
                <fullName>S. Fechas</fullName>
            </value>
            <value>
                <fullName>T. Quejas</fullName>
            </value>
            <value>
                <fullName>U. Cobranza Post.Venta</fullName>
            </value>
            <value>
                <fullName>V. Solicitudes</fullName>
            </value>
            <value>
                <fullName>W. Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>