unpackaged/main/default/objects/Casos_Residente__c/fields/Visita__c.field-meta.xml
<CustomField>
    <fullName>Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visita</label>
    <referenceTo>Visita__c</referenceTo>
    <relationshipName>Casos_Residentes</relationshipName>
    <type>Lookup</type>
</CustomField>