unpackaged/main/default/objects/Casos_Residente__c/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <label>Vivienda</label>
    <length>30</length>
    <type>Text</type>
</CustomField>