unpackaged/main/default/objects/Casos_Residente__c/fields/Viviendahabitada__c.field-meta.xml
<CustomField>
    <fullName>Viviendahabitada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vivienda habitada</label>
    <type>Checkbox</type>
</CustomField>