unpackaged/main/default/objects/Casos_Residente__c/fields/ViviendaProceso__c.field-meta.xml
<CustomField>
    <fullName>ViviendaProceso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Casos ATC</relationshipLabel>
    <relationshipName>Casos_ATC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>