unpackaged/main/default/objects/Casos_Residente__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sala</fullName>
            </value>
            <value>
                <fullName>Comedor</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Baño</fullName>
            </value>
            <value>
                <fullName>1/2 Baño</fullName>
            </value>
            <value>
                <fullName>Recamara 1</fullName>
            </value>
            <value>
                <fullName>Recamara 2</fullName>
            </value>
            <value>
                <fullName>Recamara 3</fullName>
            </value>
            <value>
                <fullName>Estancia</fullName>
            </value>
            <value>
                <fullName>Cubo Escalera</fullName>
            </value>
            <value>
                <fullName>Terraza</fullName>
            </value>
            <value>
                <fullName>Sotano</fullName>
            </value>
            <value>
                <fullName>Patio</fullName>
            </value>
            <value>
                <fullName>Fachada de Patio</fullName>
            </value>
            <value>
                <fullName>Fachada de Principal</fullName>
            </value>
            <value>
                <fullName>Fachada de Pasillo</fullName>
            </value>
            <value>
                <fullName>Azotea</fullName>
            </value>
            <value>
                <fullName>Pretil</fullName>
            </value>
            <value>
                <fullName>Huellas</fullName>
            </value>
            <value>
                <fullName>Molduras</fullName>
            </value>
            <value>
                <fullName>Boquillas</fullName>
            </value>
            <value>
                <fullName>Cuadro hidráulico</fullName>
            </value>
            <value>
                <fullName>Loza cimentación</fullName>
                <label>Losa cimentación</label>
            </value>
            <value>
                <fullName>Loza entrepiso</fullName>
                <label>Losa entrepiso</label>
            </value>
            <value>
                <fullName>Plafon</fullName>
            </value>
            <value>
                <fullName>Regadera</fullName>
            </value>
            <value>
                <fullName>Lavabo</fullName>
            </value>
            <value>
                <fullName>Murete</fullName>
            </value>
            <value>
                <fullName>Minisplit</fullName>
            </value>
            <value>
                <fullName>Area Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>