unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Cobranza_PostVenta.recordType-meta.xml
<RecordType>
    <fullName>Cobranza_PostVenta</fullName>
    <active>true</active>
    <label>Cobranza Post Venta</label>
</RecordType>