unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Faltante.recordType-meta.xml
<RecordType>
    <fullName>Faltante</fullName>
    <active>true</active>
    <label>Faltantes</label>
</RecordType>