unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Garantias.recordType-meta.xml
<RecordType>
    <fullName>Garantias</fullName>
    <active>true</active>
    <label>Garantías</label>
</RecordType>