unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Peticiones.recordType-meta.xml
<RecordType>
    <fullName>Peticiones</fullName>
    <active>true</active>
    <label>Peticiones</label>
</RecordType>