unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Servicios.recordType-meta.xml
<RecordType>
    <fullName>Servicios</fullName>
    <active>true</active>
    <label>Servicios</label>
</RecordType>