unpackaged/main/default/objects/Casos_Residente__c/recordTypes/Ventas.recordType-meta.xml
<RecordType>
    <fullName>Ventas</fullName>
    <active>true</active>
    <label>Ventas</label>
</RecordType>